Fix letter-spacing value in QR code title style

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     padding: 0 1rem;
     margin: 0;
     line-height: 120%;
-    letter-spacing: 0px;
+    letter-spacing: 0rem;
 }
 
 .qr-code__description {
